MDEV-39222: After loading saved optimizer context, further queries cause errors

The problem can be seen as:
source /tmp/saved_optimizer_context.sql
INSERT ..(or any DML);
-- This causes "Failed to match the stats from replay context" warning-turned-error.

The cause is that saved_optimizer_context.sql ends with:
  set @opt_context=...;
  set optimizer_replay_context='opt_context';
  <query for which the context was captured>
Note that optimizer_replay_context remains set and will apply for any further query.

== SOLUTION ==
Make saved optimizer context have this as last statement:
  set optimizer_replay_context=NULL;
If one desires to replay the context, it's still available in @opt_context.